Wed Jun 18 19:00:55 BST 2003  Olly Betts <olly@survex.com>

	* extra/queryparser.yy: Trim leading and trailing whitespace before
	  attempting to parse the query.

Wed Jun 18 17:58:56 BST 2003  Olly Betts <olly@survex.com>

	* extra/queryparser.yy: `using namespace Xapian;'

Fri Jun 06 01:33:33 BST 2003  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Commented out the section on the Lexicon,
	  which we no longer use.

Thu Jun 05 22:40:21 BST 2003  Olly Betts <olly@survex.com>

	* bindings/python/.cvsignore,bindings/python/Makefile.am,
	  bindings/python/dothemake.txt,bindings/swig/om_util_python.i:
	  Cleaned up building of python bindings by making better use of
	  automake.

Thu Jun 05 22:17:40 BST 2003  Olly Betts <olly@survex.com>

	* languages/Makefile.am: Reenable standard warnings apart from the
	  -Wunused.

Thu Jun 05 20:21:08 BST 2003  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Fixed a couple of problems with the new
	  query serialisation.

Thu Jun 05 17:55:21 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,configure.in: Flex is no longer used, so removed configure
	  tests and note in HACKING.

Thu Jun 05 17:53:30 BST 2003  Olly Betts <olly@survex.com>

	* tests/remotetest.cc: In test netexpand1, use TEST() rather than
	  Assert() so that the check is made in non-debug builds too.

Thu Jun 05 17:52:17 BST 2003  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,common/socketcommon.h,docs/todo.xml,
	  include/xapian/query.h,net/: Reworked query serialisation so that
	  the code is now all in api/omqueryinternal.cc.  Serialisation is
	  now rather more compact and no longer relies of flex for parsing.

Thu Jun 05 17:45:00 BST 2003  Olly Betts <olly@survex.com>

	* bin/Makefile.am: omprogsrv depends on libtest.la, so it need to be
	  in check_PROGRAMS.
	  
Thu Jun 05 17:09:10 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am: Moved bindings after extra in SUBDIRS - the bindings