@@ -1,3 +1,10 @@
+Wed Jun 18 19:02:14 BST 2003  Olly Betts <olly@survex.com>
+
+	* extra/queryparser.yy: Reworked parsing of boolean operators to
+	  improve error reporting.
+	* extra/queryparsertest.cc: Added 2 more testcases and fixed to better
+	  handle tests for expected errors.
+
 Wed Jun 18 19:00:55 BST 2003  Olly Betts <olly@survex.com>
 
 	* extra/queryparser.yy: Trim leading and trailing whitespace before
